# dj-currencies

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  ci.yml
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
dj_currencies/: admin.py  apis.py  apps.py  backends.py  exceptions.py  factories.py  factory.py  models.py  settings.py  sources.py
dj_currencies/management/commands/: update_exchange_rates.py
dj_currencies/migrations/: 0001_initial.py  0002_auto_20180429_2228.py  0003_auto_20200908_2321.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: settings.py  test_backends.py
